Fix height: stretch not supported on Firefox

--- a/styles/style.css
+++ b/styles/style.css
@@ -294,6 +294,7 @@ input {
 .url-preview-row {
     flex-wrap: nowrap;
 	gap: 0.8rem;
+	align-items: stretch;
 }
 .url-preview {
 	flex-grow: 1;
@@ -337,7 +338,6 @@ input {
 	padding: 0;
 }
 .url-preview-row .icon-button.copy-button {
-    height: stretch;
 	width: calc(2em + 12px);
 	min-width: calc(2em + 12px);
 	max-width: calc(2em + 12px);
